--- a/Mpesa.Tests/Mpesa.Tests.csproj
+++ b/Mpesa.Tests/Mpesa.Tests.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Mpesa.lib\Mpesa.lib.csproj" />
+  </ItemGroup>
+
 </Project>
