Created extension method to configure mpesa client for dotnetcore application

--- a/sample/testApi/appsettings.json
+++ b/sample/testApi/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MpesaConfig": {
+    "ShortCode": "test",
+    "Initiator": "test",
+    "LNMShortCode": "423131",
+    "LNMPassWord": "test",
+    "SecurityCredential": "test",
+    "CertPath": "test",
+    "ConsumerKey": "test",
+    "ConsumerSecret": "test",
+    "Env": "test"
+  }
 }
+
+
