--- a/sample/testApi/testApi.csproj
+++ b/sample/testApi/testApi.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\AspNetCore.Mpesa\AspNetCore.Mpesa.csproj" />
+    <ProjectReference Include="..\..\Mpesa.lib\Mpesa.lib.csproj" />
+  </ItemGroup>
+
 </Project>
