--- a/Mpesa.lib/Mpesa.lib.csproj
+++ b/Mpesa.lib/Mpesa.lib.csproj
@@ -1,15 +1,26 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>10.0</LangVersion>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+<PropertyGroup>
+<TargetFramework>netstandard2.0</TargetFramework>
+<LangVersion>10.0</LangVersion>
+<ImplicitUsings>enable</ImplicitUsings>
+<Nullable>enable</Nullable>
+</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="BouncyCastle" Version="1.8.9" />
-    <PackageReference Include="System.Text.Json" Version="6.0.2-mauipre.1.22054.8" />
+<PropertyGroup>
+  <PackageId>MpesaClient</PackageId>
+  <Version>1.0.0</Version>
+  <Authors>Edwin Muraya, Humphrey Shikunzi</Authors>
+  <Company>Safiricar</Company>
+  <Description>
+    An unofficial mpesa client library that intends to abstract away details of working with mpesa Api. Build with simplicity in mind
+  </Description>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+</PropertyGroup>
+
+
+<ItemGroup>
+  <PackageReference Include="System.Text.Json" Version="6.0.2-mauipre.1.22054.8" />
   </ItemGroup>
-
-</Project>
+  
+  </Project>
