--- a/Mpesa.lib/Mpesa.lib.csproj
+++ b/Mpesa.lib/Mpesa.lib.csproj
@@ -9,15 +9,14 @@
 
 <PropertyGroup>
   <PackageId>MpesaClient</PackageId>
-  <Version>1.0.0</Version>
-  <Authors>Edwin Muraya, Humphrey Shikunzi</Authors>
+  <Version>1.1.0</Version>
+  <Authors>Edwin Muraya, Humphry Shikunzi</Authors>
   <Company>Safiricar</Company>
-  <Description>
-    An unofficial mpesa client library that intends to abstract away details of working with mpesa Api. Build with simplicity in mind
+  <Description>  
+    This an Mpesa client library intended to help developers integrate in their code and implement Mpesa payment services easily due to abstractions of common details.
   </Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 </PropertyGroup>
-
 
 <ItemGroup>
   <PackageReference Include="System.Text.Json" Version="6.0.2-mauipre.1.22054.8" />
