finished on B2C feature

--- a/Example/testApi/appsettings.json
+++ b/Example/testApi/appsettings.json
@@ -18,7 +18,7 @@
     "ConsumerKey": "hipGvFJbOxri330c",
     "CallBackURL": "",
     "Env": "Sandbox",
-    "AccountReference": "Safiricar"
+    "AccountReference": "FedhaPap"
   }
 }
 
