worked on code for b2c

--- a/Example/testApi/appsettings.json
+++ b/Example/testApi/appsettings.json
@@ -17,8 +17,8 @@
     "ConsumerSecret": "Azs2KejU1ARvIL5JdJsARbV2gDrWmpOB",
     "ConsumerKey": "hipGvFJbOxri330c",
     "CallBackURL": "",
-    "Env": "Sandbox",
-    "AccountReference": "FedhaPap"
+    "Env": "Production",
+    "AccountReference": "Pamride"
   }
 }
 
