--- a/Mpesa.lib/Mpesa.lib.csproj
+++ b/Mpesa.lib/Mpesa.lib.csproj
@@ -19,6 +19,7 @@
 </PropertyGroup>
 
 <ItemGroup>
+  <PackageReference Include="BouncyCastle" Version="1.8.9" /> 
   <PackageReference Include="System.Text.Json" Version="6.0.2-mauipre.1.22054.8" />
   </ItemGroup>
   
