--- a/Mpesa.lib/Mpesa.lib.csproj
+++ b/Mpesa.lib/Mpesa.lib.csproj
@@ -20,6 +20,7 @@
 
 
 <ItemGroup>
+  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
   <PackageReference Include="System.Text.Json" Version="6.0.2-mauipre.1.22054.8" />
   </ItemGroup>
   
